                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 19-10-2004 fixed: memleaks in RSS feed reader
  - 19-10-2004 fixed: possible memleak in filezilla
  - 19-10-2004 fixed: [ 1049621 ] hdd spindown broken
  - 17-10-2004 fixed: python controls like labels and buttons are now verticaly aligned by default
  - 17-10-2004 fixed: Thumbnail panel spin control related crash + page no. issues
  - 17-10-2004 fixed: mplayer leaks memory (partial fix)
  - 16-10-2004 fixed: viz doesnt close when ejecting a iso or udf cd while playing
  - 16-10-2004 fixed: [ 1040328 ] viz doesnt close when music stops
  - 15-10-2004 changed: Romanian language file (Thnx to bompy)
  - 15-10-2004 fixed: [ 1046845 ] Subtitles show a vertical bar
  - 14-10-2004 changed: cleaned up switching from/to fullscreen code
  - 14-10-2004 added: now GUI_MSG_PLAYBACK_STARTED is send on file start
  - 14-10-2004 fixed: hdd spindown never took total time of player to calc spindown
  - 14-10-2004 added: Boxalizer visz updated for sync fix (thanks mynci)
  - 14-10-2004 added: Log INFO message for each window loaded for the skin (to help debug)
  - 14-10-2004 fixed: Music overlay didn't hide all controls/textures + moved up randomly
  - 13-10-2004 fixed: video overlay showed 2 colons when scrolling year and director
  - 13-10-2004 changed: multiple exact and inexact cddb matches are now listed with albumname and artist in select dialog
  - 13-10-2004 fixed: cddb doesn't respond to multiple exact matches
  - 12-10-2004 fixed: multi channel DTS software decode, major in mplayer dll tree
  - 12-10-2004 added: prelim. support for Xecutor LCD (untested) [ 1021947 ] + minor modifications